--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,4 +29,17 @@
             30
         </session-timeout>
     </session-config>
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
+    <env-entry>
+        <env-entry-name>loginOuUsuario</env-entry-name>
+        <env-entry-type>java.lang.String</env-entry-type>
+        <env-entry-value>Login</env-entry-value>
+    </env-entry>
+    <env-entry>
+        <env-entry-name>link</env-entry-name>
+        <env-entry-type>java.lang.String</env-entry-type>
+        <env-entry-value>login</env-entry-value>
+    </env-entry>
 </web-app>
