--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         version="3.0">
+    <context-param>
+        <param-name>link</param-name>
+        <param-value>login</param-value>
+    </context-param>
+    <context-param>
+        <param-name>loginOuUsuario</param-name>
+        <param-value>Login</param-value>
+    </context-param>
     <servlet>
         <servlet-name>IndexController</servlet-name>
         <servlet-class>controller.IndexController</servlet-class>
@@ -32,14 +44,4 @@
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
-    <env-entry>
-        <env-entry-name>loginOuUsuario</env-entry-name>
-        <env-entry-type>java.lang.String</env-entry-type>
-        <env-entry-value>Login</env-entry-value>
-    </env-entry>
-    <env-entry>
-        <env-entry-name>link</env-entry-name>
-        <env-entry-type>java.lang.String</env-entry-type>
-        <env-entry-value>login</env-entry-value>
-    </env-entry>
 </web-app>
