--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,13 @@
             <version>20170516</version>
         </dependency>
 
-
+        <!--  Gson: Java to Json conversion -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
